cmake_minimum_required(VERSION 3.20)
project(untitled3 C)

set(CMAKE_C_STANDARD 99)

add_executable(main test.c)
add_executable(p09-1 Math/p09-1.c)
add_executable(p09-2 Math/p09-2.c)
add_executable(p10-1 LuoJiMen/p10-1.c)
add_executable(p10-2 LuoJiMen/p10-2.c)
add_executable(p10-3 LuoJiMen/p10-3.c)
add_executable(p11-1 if_elseif_switch/p11-1.c)
add_executable(p11-2 if_elseif_switch/p11-2.c)
add_executable(p12-1 if_elseif_switch/p12-1.c)
add_executable(p12-2 if_elseif_switch/p12-2.c)
add_executable(p12-3 if_elseif_switch/p12-3.c)
add_executable(p12-demo if_elseif_switch/p12-3demo.c)
add_executable(p12-4 if_elseif_switch/p12-4.c)
add_executable(p13-1 while_dowhile/p13-1.c)
add_executable(p13-2 while_dowhile/p13-2.c)
add_executable(p13-3 while_dowhile/p13-3.c)
add_executable(p14-1 for/p14-1.c)